small change to index.html
a mess

changes

changes 2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     there is stuff here
-    <p>hey now</p>
+    <p>hey now what</p>
+    <p>change this one</p>
+    <p>hey now what</p>
+    <p>now this one</p>
+    <p>hey now what</p>
 </body>
 </html>
