index update AKA mastering the squash

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <p>now this one</p>
     <p>hey now what</p>
     <h1>no air</h1>
+    <h2>today</h2>
+    <h2>is</h2>
+    <h3>wednesday</h3>
+    <h3>yesterday</h3>
 </body>
 </html>
