index update will squash will need force push

--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 <body>
     there is stuff here
     <p>hey now what</p>
-    <p>change this one</p>
-    <p>hey now what</p>
-    <p>now this one</p>
-    <p>hey now what</p>
-    <h1>no air</h1>
-    <h2>today</h2>
+    <h2>tomorrow</h2>
     <h2>is</h2>
-    <h3>wednesday</h3>
-    <h3>yesterday</h3>
+    <h3>friday</h3>
+    <h4>don't forget to push first</h4>
 </body>
 </html>
