--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    there is stuff here
-    <p>hey now what</p>
-    <h2>tomorrow</h2>
-    <h2>is</h2>
-    <h3>friday</h3>
-    <h4>don't forget to push first</h4>
+    <p>removing stuff</p>
 </body>
 </html>
